--- a/index.html
+++ b/index.html
@@ -310,25 +310,25 @@ blockquote > #opsL {
     </div>
     <p id="halo" class="halo">Hi, You!</p>
     <!-- Message Content After Action -->
-    <p id="halo2" class="halo sty2">Happy Anniversary! 🎉</p>
+    <p id="halo2" class="halo sty2">Happy Birthday baby💗👀! 🎉</p>
     <p id="halo3" class="halo sty3">My wish on this special moment is that we can stay together and always share the same goals <3</p>
     <!-- Automatic Today’s Date -->
     <p id="tanggal" class="halo sty3"></p>
 
     <!-- Final Message Content -->
     <p id="kalimatbawah">I Love You ❤️</p>
-    <p id="kalimatbawah2" class="sembunyi">Happy Anniversary ❤️</p>
+    <p id="kalimatbawah2" class="sembunyi">Happy Birthday Gappo😘 ❤️</p>
     <p id="kalimatbawah3" class="sembunyi">I Love You ❤️</p>
 
     <div>
       <blockquote id="bq" data-text="♥">
         <!-- Opening Content -->
         <p id="kalimat">I just want to say..</p>
-        <p id="kalimatb">First of all, thank you for sticking with me 🤭</p>
-        <p id="kalimatc">Thank you also for accepting me as I am 🥺</p>
-        <p id="kalimatd">Even though we often quarrel,</p>
+        <p id="kalimatb">First of all, thank you mere sath hmesha rehne ke liye🤭</p>
+        <p id="kalimatc">Thank you also for jaisa hu waise accept krne ke liye🥺</p>
+        <p id="kalimatd">Hmare kafi ldayi ke baad bhi 🫀,</p>
         <p id="kalimate">But I still love you 😍</p>
-        <p id="kalimatf">Click LOVE on the left side!</p>
+        <p id="kalimatf">Click Heart on the left side!</p>
         <p id="opsL">Click to Continue</p>
       </blockquote>
     </div>
@@ -337,7 +337,7 @@ blockquote > #opsL {
     <div id="Tombol"><a id="By">💌 Reply</a></div>
 
     <!-- Message sent to WhatsApp -->
-    <span id="pesanWA" class="sembunyi">Aww, Happy Anniversary too!</span>
+    <span id="pesanWA" class="sembunyi">Aww, Happy Birthday too!</span>
   </div>
 
   <!-- Do Not Edit This Part -->
